코드 정리 및 안내 문구 수정